# gco

./: .gitignore  BDD.md  CLAUDE.md  README.md  auth.py  behave.ini  data.py  download_data.ps1  download_data.sh  gco_state.json  gco_state_live.json  plan.md  pretty.output  pyproject.toml  requirements.txt  streamlit_app.py  test_streamlit_app.py  theme.py
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml
.streamlit/: config.toml
backup/: gco_backup_20260329_203141.json  gco_backup_20260329_205946.json  gco_backup_20260330_214142.json  gco_backup_20260418_185728.json  gco_backup_20260428_210430.json  gco_backup_20260504_175438.json  gco_backup_20260510_094336.json  gco_backup_20260510_100107.json  gco_backup_20260525_111812.json  gco_backup_20260525_212532.json  gco_backup_20260717_163523.json  github_persistence_setup.md
docs/: GCO 2026章程.docx  GCO 2026章程.md
features/: 01_data_loading.feature  02_data_export_import.feature  03_backup_management.feature  04_player_management.feature  05_tournament_management.feature  06_data_validation.feature  environment.py
features/steps/: data_layer_steps.py
pages/: 1_📢_Announcements.py  2_📅_Events.py  3_🏆_League.py  4_🥊_Cup.py  5_⛳_Outing.py  5_🤝_Team.py  6_💾_API_Data.py  data.py  theme.py
utilities/: doc_to_md.py  pdf_to_md.py
